--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -12,8 +12,9 @@
 
 
     <div class="bg-black">
-        <h1>dom (document object model) learning  from chai aur code</h1>
+        <h1 id=" title">dom (document object model) learning  from chai aur code</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, eos?</p>
+
     </div>
 </body>
 </html>
