--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -4,14 +4,20 @@
     <meta charset="UTF-8">
     
     <title>Dom learning</title>
+    <style>
+        .bg-black{
+            background-color: black;
+            color: azure;
+        }
+    </style>
 </head>
-<body>
+<body class="bg-black">
     <!-- The Document Object Model (DOM) is an application programming interface (API) for manipulating HTML documents -->
     <!-- on browser if you type you will get only html documents => console.log(window.document) || console.log(document)
     you will get html with hidden extra documents by  => console.dir(window.document) -->
 
 
-    <div class="bg-black">
+    <div >
         <h1 id=" title">dom (document object model) learning  from chai aur code</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, eos?</p>
 
