--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -24,3 +24,28 @@
     </div>
 </body>
 </html>
+
+<!-- 
+    document.getElementById('title') => <h1 id=" title">dom (document object model) learning  from chai aur code</h1>
+
+    document.getElementById('title').id => 'title'
+
+    document.getElementById('title').class => undefined
+
+    document.getElementById('title').className => 'heading' (behind the scene it will take as className rather than class)
+
+    document.getElementById('title').getAttribute() => argument required to access getAttribute() function
+
+    document.getElementById('title').getAttribute('id') => 'title'
+
+    document.getElementById('title').getAttribute('class') => 'heading'
+
+    
+
+
+
+
+
+
+
+-->
