first introcution revised

--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -28,9 +28,13 @@
 </html>
 
 <!-- 
+    DOCUMENT Method's
+
     document.getElementById('title') => <h1 id=" title">dom (document object model) learning  from chai aur code</h1>
 
     document.getElementById('title').id => 'title'
+
+    document.getElementById('heading of the webpages').innerHTML => '<h1>chai aur code</h1>'
 
     document.getElementById('title').class => undefined
 
