some more property on queryselectors

--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -15,7 +15,7 @@
     <!-- The Document Object Model (DOM) is an application programming interface (API) for manipulating HTML documents -->
     <!-- on browser if you type you will get only html documents => console.log(window.document) || console.log(document)
     you will get html with hidden extra documents by  => console.dir(window.document) 
-     * DOM TREE in destop too
+     * DOM TREE in desktop too
      -->
 
 
