--- a/06_dom/two.html
+++ b/06_dom/two.html
@@ -22,7 +22,24 @@ const parent = document.querySelector('.parent')
 console.log(parent);
 console.log(parent.children); //htmlcollection ,almost array like property
 console.log(parent.children[1]); //return div represent tuesday
-console.log(parent.children[1].innerHtml); //tuesday
+console.log(parent.children[1].innerHTML); //tuesday
 
+
+// for (let i = 0; i < parent.children.length; i++) {
+//     console.log(parent.children[i].innerHTML); //will return all the values 
+    
+// }
+
+parent.children[1].style.color = "orange"
+// console.log(parent.firstElementChild);//return div - monday
+// console.log(parent.lastElementChild);//return div - sunday
+
+
+const dayone = document.querySelector(".day")
+// console.log(dayone); //monday
+// console.log(dayone.parentElement);//return all the parent element i.e. whole div's
+// console.log(dayone.nextElementSibling);//return tuesday with whole div tag
+
+console.log("NODES:" ,parent.childNodes);//nodelist return more values -> complex tree structure , blank line too a div element text element (enter returns ->text element,linebreak).
 </script>
 </html>
