--- a/08_events/one.html
+++ b/08_events/one.html
@@ -19,6 +19,7 @@
    </div>
 </body>
 <script>
+ /*
      // 1. in js every events run sequntially 
     // 2. event sholud not inject in html to reduce problem in code instead do
     //method-2
@@ -27,10 +28,10 @@
     // }
     //but this approach is not recmmended , coz jab aap id par onclick event laga rhae hai toh onclik pr kuch problem ho sakti hai kyuki aapko bhot jyada information nahi milti hai apko EVENTLISTNERS use karna chahaiye they give us propogation ability 
     //method-3
-      document.getElementById('owl').addEventListener('click',function(){
-          alert("owl clicked again ")
+    //   document.getElementById('owl').addEventListener('click',function(){
+    //       alert("owl clicked again ")
 
-      }) 
+    //   }) 
       //third parameter is false defalut  -> document.getElementById('owl').addEventListener('click',function(){},false) , in interview this question will asked , 
       // method -4 attachEvenet()
       //method -5 jQuery - on method 
@@ -38,9 +39,63 @@
 
       //3. event Object
       document.getElementById('owl').addEventListener('click',function(e){
-          alert("owl clicked again ")
+          console.log(e); //pointer events 
 
-      }) 
+      },true)  
+      //**** event propogation  have 2 -> context 1.event bubbling 2.event capturing 
+
+
+      //4.type , timestamp , defaultPrevented 
+      //target,toElement, srcElement ,curremtTarget,
+      //interview - clientX,clientY,screenX,screenY
+      //altkey , ctrlkey,shiftkey,keycode
+
+
+      //5.**** event propogation  have 2 -> context 1.event bubbling 2.event capturing 
+      //1.bubbling event  - bubbles neecha se uper jate hai joh bhi inside-> outside 
+      document.getElementById('images').addEventListener('click',function(e){
+          console.log("cliked insde ul"); //pointer events 
+      },false)
+      document.getElementById('owl').addEventListener('click',function(e){
+          console.log("owl cliked"); //pointer events 
+      },false)
+ //output -> owl clicked  cliked inside ul
+       //2.capturing event -top -> bottom 
+       document.getElementById('images').addEventListener('click',function(e){
+          console.log("cliked insde ul"); //pointer events 
+      },true)
+      document.getElementById('owl').addEventListener('click',function(e){
+          console.log("owl cliked"); //pointer events -> //output -> cliked inside ul  owl clicked
+          e.stopPropagation()//stop propogatioon
+      },true)
+ //output -> cliked inside ul  owl clicked
+
+document.getElementById('google').addEventListener('click', function (e) {
+    e.preventDefault()
+    e.stopPropagation() //propogaton stooped so inside ul then google clicked 
+    console.log("google clicked")
+},false)
+
+*/
+
+
+//project styled work for better understanding 
+//when i click any image i shold be disappear 
+
+document.querySelector('#images').addEventListener('click',function(e){
+    //console.log(e.target.parentNode);
+    console.log(e.target.tagName);
+    if(e.target.tagName === 'IMG'){
+        console.log(e.target.id)
+        let removeit = e.target.parentNode
+        removeit.remove();  
+    }
+    // let removeit = e.target.parentNode
+    //  removeit.remove();  //whole images will be disappea if i click any ul element 
+
+    //alternate - removeit.parentNode.removeChild(removeit)
+},false)
+         
 
 </script>
 </html>
